# TP2_Paradigmas

./: README.md
ej1/: CMakeLists.txt  main.cpp  makefile
ej1/headers/: pokedex.hpp  pokemon.hpp  pokemoninfo.hpp
ej1/main/: main.cpp
ej1/src/: pokedex.cpp  pokemon.cpp  pokemoninfo.cpp
ej2/: CMakeLists.txt  main.cpp  makefile
ej2/headers/: dron.hpp
ej2/main/: main.cpp
ej2/src/: dron.cpp
ej3/: CMakeLists.txt  a  main.cpp
